# PyGraphCurvature

./: .gitignore  LICENSE  README.md  graph_curvature.py  pyproject.toml  requirements.txt  test_graph_curvature.py
.github/workflows/: build.yml
docs/: figs.py
examples/: compare_curvatures.py  example.ipynb  example_graphs.py
tests/: test_graph_curvature.py
